# distill

./: .coverage  .distill.toml  .env.example  .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  LICENSE  MISSION.md  README.md  index.html  pyproject.toml  sitemap.xml
.claude/commands/: voice-extract.md  voice-show.md
.vermas/: README-MERGE-RECOVERY.md  merge-analysis-summary.txt  merge-conflict-details.md  merge-conflict-diffs.txt  merge-strategy-plan.txt  project.yaml
docs/: cli-diagnostic.md  content-ingestion-research.md  mkdocs.yml
ghost-theme/: default.hbs  error.hbs  index.hbs  package-lock.json  package.json  page.hbs  post.hbs  tag.hbs
insights/: index.md
product/: .dockerignore  .gitignore  Dockerfile  Dockerfile.cron  SETUP.md  docker-compose.yml  package.json  render.yaml
scripts/: backfill_content_store.py  daily-intake.sh  setup-tls.sh  setup.sh
search/: search_index.json
src/: __main__.py  cli.py  config.py  core.py  editorial.py  embeddings.py  errors.py  images.py  llm.py  narrative.py  notifications.py  retrieval.py  store.py
support/: com.distill.daily.plist
tests/: test_cli.py  test_cli_bare.py  test_cli_brainstorm.py  test_cli_graph.py  test_cli_mcp.py  test_config_projects.py  test_core_pipeline.py  test_daily_social.py  test_distill_config.py  test_image_pipeline.py  test_images.py  test_llm.py  test_narrative.py  test_narrative_quality.py  test_postiz.py  test_postiz_publishers.py  test_store_pgvector_mocked.py  test_verify_all_kpis.py
web/: biome.json  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
(+12401 files in other folders)
